# Industrial_Internet

./: .gitignore  LICENSE  README.md  cli.py  client.py  client_simulator.py  config.ini  data.md  db.sql  db_init.sql  pyproject.toml  readme.txt  requirements.txt  server.py  创新实战案例-胡.docx
tests/: test_server.py
